# mvdata

./: README.md  pyproject.toml
src/mvdata/: .ml.py.swp  Untitled.ipynb  Untitled1.ipynb  app.py  mj_file.py  ml.py  parse_parquet.py  utils.py
src/mvstar/: mc.py  mld.py
tests/: mc.py  mld.py  module_test.py  test_mld.py
~/data/movies/year=2015/: data.json
